Bug 219473 - tip text too small to be readable
Summary: tip text too small to be readable
Status: RESOLVED FIXED
Alias: None
Product: kanagram
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-20 21:24 UTC by Prosper
Modified: 2010-10-29 02:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot Kanagram with tip-window exhibiting text in a very small font. (37.27 KB, image/png)
2009-12-20 21:27 UTC, Prosper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Prosper 2009-12-20 21:24:53 UTC
Version:           0.2 (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

When the tip to find a word is a rather long sentence, the font is automatically diminished in order to make it fit into the window and on maximum two lines. This can become extremely difficult to read and even unreadable.
I attach a screenshot from the Dutch version, believing it does not have anything to do with translations.
Comment 1 Prosper 2009-12-20 21:27:00 UTC
Created attachment 39197 [details]
Screenshot Kanagram with tip-window exhibiting text in a very small font.

See the screenshot.
Comment 2 Christoph Feck 2010-10-29 02:42:14 UTC
SVN commit 1190821 by cfeck:

Fix font size calculation

Use a brute force method to handle the word wrapped texts
that are used by kanagram. Also make the hint text box
slightly taller to center better and have more room.

BUG: 219473


 M  +2 -2      kanagram/src/kanagram.cpp  
 M  +9 -1      libkdeedu/kdeeduui/kedufontutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190821