Fix font size calculation

Use a brute force method to handle the word wrapped texts
that are used by kanagram. Also make the hint text box
slightly taller to center better and have more room.

BUG: 219473

svn path=/trunk/KDE/kdeedu/libkdeedu/; revision=1190821